# CookieLinkRelay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Source/: RelayProtocol.h
packaging/: linux_deb.sh  macos_package.sh  windows_cookie_link_relay.nsi
server/: TcpRelayServer.cpp
